added more classes

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
           <div class="keys">
             <span class="text">10<sup>x</sup></span>
           </div>
-          <div class="keys"><span class="text">7</span></div>
-          <div class="keys"><span class="text">8</span></div>
-          <div class="keys"><span class="text">9</span></div>
-          <div class="keys"><span class="text">/</span></div>
+          <div class="keys number"><span class="text">7</span></div>
+          <div class="keys number"><span class="text">8</span></div>
+          <div class="keys number"><span class="text">9</span></div>
+          <div class="keys arithematic"><span class="text">/</span></div>
           <div class="keys"><span class="text">1/x</span></div>
           <div class="keys">
             <span class="text">&radic;<span>x</span></span>
@@ -58,30 +58,30 @@
           <div class="keys">
             <span class="text">log<sub>10</sub></span>
           </div>
-          <div class="keys"><span class="text">4</span></div>
-          <div class="keys"><span class="text">5</span></div>
-          <div class="keys"><span class="text">6</span></div>
-          <div class="keys"><span class="text">*</span></div>
+          <div class="keys number"><span class="text">4</span></div>
+          <div class="keys number"><span class="text">5</span></div>
+          <div class="keys number"><span class="text">6</span></div>
+          <div class="keys arithematic"><span class="text">*</span></div>
           <div class="keys"><span class="text">x!</span></div>
           <div class="keys"><span class="text">sin</span></div>
           <div class="keys"><span class="text">cos</span></div>
           <div class="keys"><span class="text">tan</span></div>
           <div class="keys"><span class="text">e</span></div>
           <div class="keys"><span class="text">EE</span></div>
-          <div class="keys"><span class="text">1</span></div>
-          <div class="keys"><span class="text">2</span></div>
-          <div class="keys"><span class="text">3</span></div>
-          <div class="keys"><span class="text">-</span></div>
+          <div class="keys number"><span class="text">1</span></div>
+          <div class="keys number"><span class="text">2</span></div>
+          <div class="keys number"><span class="text">3</span></div>
+          <div class="keys arithematic"><span class="text">-</span></div>
           <div class="keys"><span class="text">Rad</span></div>
           <div class="keys"><span class="text">sinh</span></div>
           <div class="keys"><span class="text">cosh</span></div>
           <div class="keys"><span class="text">tanh</span></div>
           <div class="keys"><span class="text">&pi;</span></div>
           <div class="keys"><span class="text">Rand</span></div>
-          <div class="keys"><span class="text">.</span></div>
-          <div class="keys"><span class="text">0</span></div>
+          <div class="keys dot"><span class="text">.</span></div>
+          <div class="keys number"><span class="text">0</span></div>
           <div class="keys"><span class="text">ans</span></div>
-          <div class="keys"><span class="text">=</span></div>
+          <div class="keys arithematic"><span class="text">=</span></div>
         </div>
       </div>
     </main>
