minor changes in style

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
           <div class="keys"><span class="text">AC</span></div>
           <div class="keys"><span class="text">+/-</span></div>
           <div class="keys"><span class="text">%</span></div>
-          <div class="keys"><span class="text"><=</span></div>
+          <div class="keys">
+            <span class="text image"
+              ><img
+                src="./assets/images/backspace.png"
+                alt="backspace icon"
+                width="19px
+              "
+            /></span>
+          </div>
           <div class="keys">
             <span class="text">2<sup>nd</sup></span>
           </div>
@@ -72,7 +80,7 @@
           <div class="keys number"><span class="text">2</span></div>
           <div class="keys number"><span class="text">3</span></div>
           <div class="keys arithematic"><span class="text">-</span></div>
-          <div class="keys"><span class="text">Rad</span></div>
+          <div class="keys" id="angle"><span class="text">Rad</span></div>
           <div class="keys"><span class="text">sinh</span></div>
           <div class="keys"><span class="text">cosh</span></div>
           <div class="keys"><span class="text">tanh</span></div>
@@ -80,8 +88,12 @@
           <div class="keys"><span class="text">Rand</span></div>
           <div class="keys dot"><span class="text">.</span></div>
           <div class="keys number"><span class="text">0</span></div>
-          <div class="keys"><span class="text">ans</span></div>
-          <div class="keys arithematic"><span class="text">=</span></div>
+          <div class="keys" id="answer-button">
+            <span class="text">ans</span>
+          </div>
+          <div class="keys arithematic" id="equalto">
+            <span class="text">=</span>
+          </div>
         </div>
       </div>
     </main>
