added dragabality function

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <main>
-      <div><a href="test.html">TEST HERE </a></div>
-      <div class="calculator">
+      <div class="calculator" draggable="true">
+        <div class="topbar">
+          <div class="mac_buttons red-button"></div>
+          <div class="mac_buttons yellow-button"></div>
+          <div class="mac_buttons green-button"></div>
+        </div>
         <div class="display"></div>
         <div class="keypad">
           <div class="keys"><span class="text">(</span></div>
@@ -97,5 +101,7 @@
         </div>
       </div>
     </main>
+    <script src="drag_calculator.js"></script>
+    <!-- Link to external JavaScript file -->
   </body>
 </html>
