removed draggable function

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <div class="calculator" draggable="true">
+      <div class="calculator" draggable="false">
         <div class="topbar">
           <div class="mac_buttons red-button"></div>
           <div class="mac_buttons yellow-button"></div>
