--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
           <div class="keys"><span class="text">m+</span></div>
           <div class="keys"><span class="text">m-</span></div>
           <div class="keys"><span class="text">mr</span></div>
-          <div class="keys clear"><span class="text">AC</span></div>
-          <div class="keys change-sign"><span class="text">+/-</span></div>
-          <div class="keys"><span class="text">%</span></div>
+          <div class="keys clear topButtons"><span class="text">AC</span></div>
+          <div class="keys change-sign topButtons">
+            <span class="text">+/-</span>
+          </div>
+          <div class="keys topButtons"><span class="text">%</span></div>
           <div class="keys backspace">
             <span class="text image"
               ><img
