added keyboard functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="message"><span id="message-content"></span></div>
         </div>
         <div class="display">
-          <span id="display_content"></span>
+          <span id="display_content" contenteditable="true"></span>
         </div>
         <div class="keypad">
           <div class="keys bracket" id="left-bracket">
@@ -87,7 +87,7 @@
           <div class="keys"><span class="text">sin</span></div>
           <div class="keys"><span class="text">cos</span></div>
           <div class="keys"><span class="text">tan</span></div>
-          <div class="keys"><span class="text">e</span></div>
+          <div class="keys" id="eularNumber"><span class="text">e</span></div>
           <div class="keys"><span class="text">EE</span></div>
           <div class="keys number"><span class="text">1</span></div>
           <div class="keys number"><span class="text">2</span></div>
