--- a/index.html
+++ b/index.html
@@ -25,15 +25,21 @@
           <div class="keys bracket" id="left-bracket">
             <span class="text">)</span>
           </div>
-          <div class="keys"><span class="text">mc</span></div>
-          <div class="keys"><span class="text">m+</span></div>
-          <div class="keys"><span class="text">m-</span></div>
-          <div class="keys"><span class="text">mr</span></div>
+          <div class="keys" id="memory-clear">
+            <span class="text">mc</span>
+          </div>
+          <div class="keys" id="memory-add"><span class="text">m+</span></div>
+          <div class="keys" id="memory-sub"><span class="text">m-</span></div>
+          <div class="keys" id="memory-recall">
+            <span class="text">mr</span>
+          </div>
           <div class="keys clear topButtons"><span class="text">AC</span></div>
           <div class="keys change-sign topButtons">
             <span class="text">+/-</span>
           </div>
-          <div class="keys topButtons"><span class="text">%</span></div>
+          <div class="keys topButtons" id="percentage">
+            <span class="text">%</span>
+          </div>
           <div class="keys backspace">
             <span class="text image"
               ><img
@@ -75,9 +81,11 @@
           <div class="keys">
             <span class="text"><sup>y</sup>&radic;<span>x</span></span>
           </div>
-          <div class="keys"><span class="text">ln</span></div>
+          <div class="keys log" id="logorithm">
+            <span class="text">ln</span>
+          </div>
           <div class="keys">
-            <span class="text">log<sub>10</sub></span>
+            <span class="text log" id="logorithmBase10">log<sub>10</sub></span>
           </div>
           <div class="keys number"><span class="text">4</span></div>
           <div class="keys number"><span class="text">5</span></div>
@@ -97,7 +105,7 @@
           <div class="keys"><span class="text">sinh</span></div>
           <div class="keys"><span class="text">cosh</span></div>
           <div class="keys"><span class="text">tanh</span></div>
-          <div class="keys"><span class="text">&pi;</span></div>
+          <div class="keys" id="pi"><span class="text">&pi;</span></div>
           <div class="keys"><span class="text">Rand</span></div>
           <div class="keys dot"><span class="text">.</span></div>
           <div class="keys number"><span class="text">0</span></div>
