Added most of the cunctionality for large screens

--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
           <div class="keys">
             <span class="text">2<sup>nd</sup></span>
           </div>
-          <div class="keys">
+          <div class="keys" id="square">
             <span class="text">x<sup>2</sup></span>
           </div>
-          <div class="keys">
+          <div class="keys" id="cube">
             <span class="text">x<sup>3</sup></span>
           </div>
-          <div class="keys">
+          <div class="keys" id="raiseToPowerY">
             <span class="text">x<sup>y</sup></span>
           </div>
-          <div class="keys">
+          <div class="keys" id="eRaiseToPowerX">
             <span class="text">e<sup>x</sup></span>
           </div>
-          <div class="keys">
+          <div class="keys" id="tenRaiseToPowerX">
             <span class="text">10<sup>x</sup></span>
           </div>
           <div class="keys number"><span class="text">7</span></div>
           <div class="keys number"><span class="text">8</span></div>
           <div class="keys number"><span class="text">9</span></div>
           <div class="keys arithematic"><span class="text">/</span></div>
-          <div class="keys"><span class="text">1/x</span></div>
+          <div class="keys" id="reciprocal"><span class="text">1/x</span></div>
           <div class="keys">
-            <span class="text">&radic;<span>x</span></span>
+            <span class="text" id="squareRoot">&radic;<span>x</span></span>
           </div>
-          <div class="keys">
+          <div class="keys" id="cubeRoot">
             <span class="text"><sup>3</sup>&radic;<span>x</span></span>
           </div>
-          <div class="keys">
+          <div class="keys" id="ythRoot">
             <span class="text"><sup>y</sup>&radic;<span>x</span></span>
           </div>
           <div class="keys log" id="logorithm">
@@ -91,10 +91,10 @@
           <div class="keys number"><span class="text">5</span></div>
           <div class="keys number"><span class="text">6</span></div>
           <div class="keys arithematic"><span class="text">*</span></div>
-          <div class="keys"><span class="text">x!</span></div>
-          <div class="keys"><span class="text">sin</span></div>
-          <div class="keys"><span class="text">cos</span></div>
-          <div class="keys"><span class="text">tan</span></div>
+          <div class="keys" id="factorial"><span class="text">x!</span></div>
+          <div class="keys" id="sin"><span class="text">sin</span></div>
+          <div class="keys" id="cos"><span class="text">cos</span></div>
+          <div class="keys" id="tan"><span class="text">tan</span></div>
           <div class="keys" id="eularNumber"><span class="text">e</span></div>
           <div class="keys"><span class="text">EE</span></div>
           <div class="keys number"><span class="text">1</span></div>
@@ -106,7 +106,7 @@
           <div class="keys"><span class="text">cosh</span></div>
           <div class="keys"><span class="text">tanh</span></div>
           <div class="keys" id="pi"><span class="text">&pi;</span></div>
-          <div class="keys"><span class="text">Rand</span></div>
+          <div class="keys" id="random"><span class="text">Rand</span></div>
           <div class="keys dot"><span class="text">.</span></div>
           <div class="keys number"><span class="text">0</span></div>
           <div class="keys arithematic" id="plus">
